Upd for TC version

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -4131,3 +4131,14 @@ AntiCheats.FlyHackTimer = 3000
 
 #
 ###################################################################################################
+
+###################################################################################################
+#
+# AntiCheats.forceExcludeMapsid disabled maps
+#        Description: disabled mapid for anticheat system
+#        Example:     "616,649"
+
+AntiCheats.forceExcludeMapsid = ""
+
+#
+###################################################################################################
