--- a/dep/bzip2/CMakeLists.txt
+++ b/dep/bzip2/CMakeLists.txt
@@ -25,6 +25,8 @@ else()
   file(GLOB sources *.c)
   add_library(bzip2 STATIC
     ${sources})
+	
+  set_target_properties(bzip2 PROPERTIES LINKER_LANGUAGE CXX)
 
   target_include_directories(bzip2
     PUBLIC
