--- a/dep/zlib/CMakeLists.txt
+++ b/dep/zlib/CMakeLists.txt
@@ -38,6 +38,8 @@ else()
 
   add_library(zlib STATIC
     ${zlib_STAT_SRCS})
+	
+  set_target_properties(zlib PROPERTIES LINKER_LANGUAGE CXX)
 
   target_include_directories(zlib
     PUBLIC
