- updated argon2 to latest release from https://github.com/P-H-C/phc-winner-argon2
- modified CMakeLists.txt to use the reference implementation on aarch64

--- a/dep/argon2/CMakeLists.txt
+++ b/dep/argon2/CMakeLists.txt
@@ -9,6 +9,15 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 file(GLOB_RECURSE sources *.c)
+
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
+    list(REMOVE_ITEM sources
+            ${CMAKE_CURRENT_SOURCE_DIR}/argon2/opt.c)
+else()
+    list(REMOVE_ITEM sources
+            ${CMAKE_CURRENT_SOURCE_DIR}/argon2/ref.c)
+endif()
+
 add_library(argon2 STATIC
 ${sources})
 
