--- a/dep/argon2/CMakeLists.txt
+++ b/dep/argon2/CMakeLists.txt
@@ -9,6 +9,7 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 file(GLOB_RECURSE sources *.c)
+add_definitions(-DARGON2_NO_THREADS)
 
 if(CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
   list(REMOVE_ITEM sources
