Fix other make program e.g. ninja/nmake in windows by upgrade cotire and cmake auth/world conf file install command

--- a/src/server/authserver/CMakeLists.txt
+++ b/src/server/authserver/CMakeLists.txt
@@ -63,11 +63,18 @@ set_target_properties(authserver
         "server")
 
 if( WIN32 )
-  if ( "${CMAKE_MAKE_PROGRAM}" MATCHES "MSBuild" )
-    add_custom_command(TARGET authserver
-      POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/authserver.conf.dist ${CMAKE_BINARY_DIR}/bin/$(ConfigurationName)/
-    )
+  if ( MSVC )
+    if (${CMAKE_MAKE_PROGRAM} MATCHES "MSBuild")
+      add_custom_command(TARGET authserver
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/authserver.conf.dist ${CMAKE_BINARY_DIR}/bin/$(ConfigurationName)/
+      )
+    else()
+      add_custom_command(TARGET authserver
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/authserver.conf.dist ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/
+      )
+    endif()
   elseif ( MINGW )
     add_custom_command(TARGET authserver
       POST_BUILD
