--- a/src/server/game/Joker/joker.conf
+++ b/src/server/game/Joker/joker.conf
@@ -8,6 +8,9 @@ InstanceEncounterDamageMod_Mage = 3
 EliteDamageMod_Warrior = 1.5
 EliteDamageMod_Paladin = 1.5
 EliteDamageMod_Mage = 1.5
+UniqueEliteDamageMod_Warrior = 2
+UniqueEliteDamageMod_Paladin = 2
+UniqueEliteDamageMod_Mage = 2
 RareDamageMod_Warrior = 2
 RareDamageMod_Paladin = 2
 RareDamageMod_Mage = 2
@@ -21,6 +24,9 @@ InstanceEncounterAPMod_Mage = 1
 EliteAPMod_Warrior = 1.5
 EliteAPMod_Paladin = 1.3
 EliteAPMod_Mage = 1
+UniqueEliteAPMod_Warrior = 2
+UniqueEliteAPMod_Paladin = 1.7
+UniqueEliteAPMod_Mage = 1
 RareAPMod_Warrior = 2
 RareAPMod_Paladin = 1.7
 RareAPMod_Mage = 1
