--- a/src/server/game/Robot/robot.conf
+++ b/src/server/game/Robot/robot.conf
@@ -1,6 +1,8 @@
 [robot]
 
 Enable = 1
-ResetRobots = 1
+ResetRobots = 0
 RobotAccountNamePrefix = ROBOT
-OnlineLevel = 22
+OnlineLevel = 0
+OnlineMinDelay = 60000
+OnlineMaxDelay = 300000
