--- a/src/server/game/Joker/joker.conf
+++ b/src/server/game/Joker/joker.conf
@@ -2,34 +2,14 @@
 
 Enable = 1
 
-InstanceEncounterDamageMod_Warrior = 3
-InstanceEncounterDamageMod_Paladin = 3
-InstanceEncounterDamageMod_Mage = 3
-EliteDamageMod_Warrior = 1.5
-EliteDamageMod_Paladin = 1.5
-EliteDamageMod_Mage = 1.5
-UniqueEliteDamageMod_Warrior = 2
-UniqueEliteDamageMod_Paladin = 2
-UniqueEliteDamageMod_Mage = 2
-RareDamageMod_Warrior = 3
-RareDamageMod_Paladin = 3
-RareDamageMod_Mage = 3
-RareEliteDamageMod_Warrior = 4
-RareEliteDamageMod_Paladin = 4
-RareEliteDamageMod_Mage = 4
+InstanceEncounterDamageMod = 3
+EliteDamageMod = 1.5
+UniqueEliteDamageMod = 2
+RareDamageMod = 2
+RareEliteDamageMod = 3
 
-InstanceEncounterAPMod_Warrior = 3
-InstanceEncounterAPMod_Paladin = 2.5
-InstanceEncounterAPMod_Mage = 1
-EliteAPMod_Warrior = 1.5
-EliteAPMod_Paladin = 1.3
-EliteAPMod_Mage = 1
-UniqueEliteAPMod_Warrior = 2
-UniqueEliteAPMod_Paladin = 1.7
-UniqueEliteAPMod_Mage = 1
-RareAPMod_Warrior = 3
-RareAPMod_Paladin = 2.5
-RareAPMod_Mage = 1
-RareEliteAPMod_Warrior = 4
-RareEliteAPMod_Paladin = 3
-RareEliteAPMod_Mage = 1
+InstanceEncounterAPMod = 3
+EliteAPMod = 1.5
+UniqueEliteAPMod = 2
+RareAPMod = 2
+RareEliteAPMod = 3
