--- a/dep/boost/CMakeLists.txt
+++ b/dep/boost/CMakeLists.txt
@@ -16,10 +16,14 @@ if(WIN32)
       set(BOOST_LIBRARYDIR ${BOOST_ROOT}/lib${PLATFORM}-msvc-12.0)
     elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.10)
       set(BOOST_LIBRARYDIR ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.0)
+	elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.20)
+	  list(APPEND BOOST_LIBRARYDIR
+      ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.1
+      ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.0)
     else()
       list(APPEND BOOST_LIBRARYDIR
-        ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.1
-        ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.0)
+        ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.2
+        ${BOOST_ROOT}/lib${PLATFORM}-msvc-14.1)
     endif()
   else()
     message(FATAL_ERROR "No BOOST_ROOT environment variable could be found! Please make sure it is set and the points to your Boost installation.")
