--- a/src/server/game/Robot/robot.conf
+++ b/src/server/game/Robot/robot.conf
@@ -1,8 +1,9 @@
 [robot]
 
 Enable = 1
-ResetRobots = 0
-RobotAccountNamePrefix = ROBOT
-OnlineLevel = 0
+ResetRobots = 1
+AccountNamePrefix = ROBOT
+OnlineLevel = 56
+CountEachLevel = 10
 OnlineMinDelay = 60000
 OnlineMaxDelay = 300000
