chase follow group interest

--- a/src/server/game/Robot/robot.conf
+++ b/src/server/game/Robot/robot.conf
@@ -1,9 +1,10 @@
 [robot]
 
 Enable = 1
-ResetRobots = 1
+ResetRobots = 0
 AccountNamePrefix = ROBOT
-OnlineLevel = 56
-CountEachLevel = 10
+OnlineLevel = 70
+CountEachLevel = 20
 OnlineMinDelay = 60000
 OnlineMaxDelay = 300000
+GroupInterest = 1
