--- a/src/server/game/Robot/robot.conf
+++ b/src/server/game/Robot/robot.conf
@@ -8,3 +8,9 @@ CountEachLevel = 20
 OnlineMinDelay = 60000
 OnlineMaxDelay = 300000
 GroupInterest = 1
+TeleportMinRange = 1000.0
+TeleportMaxRange = 5000.0
+DeathMinDelay = 1800000
+DeathMaxDelay = 3600000
+SoloMinDelay = 600000
+SoloMaxDelay = 1200000
